--- a/css/style.css
+++ b/css/style.css
@@ -8565,7 +8565,7 @@ border: none;
   text-align: justify;
 }
 .hero-deer{
-  background: -webkit-linear-gradient(0deg, rgba(236,196,124,0.7), rgba(236,196,124,0.7) ),url('/../images/deer-sec.png');
+  background: -webkit-linear-gradient(0deg, rgba(236,196,124,0.7), rgba(236,196,124,0.7) ),url('../images/deer-sec.png');
   background-position: bottom; 
   background-size: cover;
   background-repeat: no-repeat;
