--- a/css/style.css
+++ b/css/style.css
@@ -8875,6 +8875,117 @@ border: none;
   text-align: center;
   color: #888888;
 }
+/* latest-news- homepage */
+.side-card{
+  box-shadow: 4px 4px 0px #f0f0f0;
+  border-radius: 8px;
+  min-height: 230px;
+  background-color: #FFFFFFD9 !important;
+}
+.side-card .card-body {
+  padding: 0.9rem;
+}
+.side-card .card-title {
+  position: relative;
+  padding-bottom: 8px;
+  color: #771f19;
+}
+.side-card .card-title:before {
+  content: "";
+  position: absolute;
+  border: 0;
+  width: 50px;
+  height: 2px;
+  background: #d5a54f;
+  z-index: 1;
+  margin-left: 0;
+  bottom: 0;
+  left: 0;
+}
+.side-card .ne-scroll {
+  height: 210px;
+  overflow: hidden;
+}
+.side-card .ne-box {
+  display: flex;
+  padding: 12px 0;
+  border-bottom: 1px dotted #e9e9e9;
+}
+.side-card .ne-box .ne-img {
+  float: left;
+  padding-right: 10px;
+}
+.side-card .ne-box .ne-img img {
+  width: 50px;
+  height: 50px;
+  border-radius: 4px;
+}
+.side-card .ne-box .ne-item .ne-desc a {
+  font-size: 14px;
+  color: #000;
+  text-transform: capitalize;
+  margin-bottom: 0;
+  display: inline-block;
+  margin-top: -2px;
+  /* height: 40px; */
+  overflow: hidden;
+  font-weight: 600;
+  line-height: 20px;
+  text-decoration: none;
+}
+.side-card .ne-box .ne-item .ne-date {
+  font-size: 13px;
+  color: #666;
+}
+.side-card .ne-box .ne-item .ne-date i {
+  font-size: 15px;
+  color: #781f19;
+  padding-right: 5px;
+  vertical-align: middle;
+}
+.latest-news{
+  position: absolute;
+    top: 20%;
+    left: 72%;
+}
+#scroll-text {
+  height: 100%;
+  
+  /* animation properties */
+  -moz-transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  
+  -moz-animation: my-animation 15s linear infinite;
+  -webkit-animation: my-animation 15s linear infinite;
+  animation: my-animation 10s linear infinite;
+}
+
+/* for Firefox */
+@-moz-keyframes my-animation {
+  from { -moz-transform: translateY(100%); }
+  to { -moz-transform: translateY(-100%); }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+  from { -webkit-transform: translateY(100%); }
+  to { -webkit-transform: translateY(-100%); }
+}
+
+@keyframes my-animation {
+  from {
+    -moz-transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+  }
+  to {
+    -moz-transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+  }
+}
+/* end */
 
 /* events -homepage */
 .blog-home2 {
@@ -9086,6 +9197,9 @@ color: #fff;
 .card-container{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
+}
+.card-container a{
+  text-decoration: none;
 }
 
 .btn.active {
@@ -9392,10 +9506,47 @@ hr.solid-second{
   .on-hover{
     padding: 15px 0;
   }
-  
+  .latest-news{
+    top: 8%;
+    left: 30% !important;
+    width: 50%;
+    max-height:185px;
+  }
+  .side-card .card-title{
+    font-size: 13px;
+  }
+  .side-card{
+    min-height: 185px;
+  }
+  .side-card .ne-scroll{
+    height: 85px;
+  }
+  .side-card .ne-box .ne-img img{
+    width: 30px;
+    height: 30px;
+  }
+  .side-card .ne-box .ne-item .ne-desc a{
+    font-size: 12px;
+  }
+  #video-viewport{
+    height: 30vh;
+  }
+  video{
+    height: auto;
+    transform: scale(2.5);
+    transform-origin: center;
+  }
+  .dep-btn{
+    font-size: 12px;
+  }   
   
 
 
+}
+@media only screen and (max-width: 1200px) {
+  .latest-news{
+    left:65%;
+  }
 }
 
 
