--- a/css/style.css
+++ b/css/style.css
@@ -8653,7 +8653,6 @@ font-weight: 700 !important;
 }
 .rearch-img{
   text-align: center !important;
-  justify-content: center;
 }
 .research-col{
   padding: 10px;
@@ -8744,9 +8743,7 @@ font-weight: 700 !important;
   object-fit: cover;
   opacity: 0.4;
   border-radius: 10px;
-  
 }
-
 
 /* Faculty achievement */
 .fac-headng{
@@ -8877,7 +8874,6 @@ border: none;
   font-family: 'Lato',sans-serif;
   text-align: center;
   color: #888888;
-
 }
 /* latest-news- homepage */
 .side-card{
@@ -8990,7 +8986,6 @@ border: none;
   }
 }
 /* end */
-
 
 /* events -homepage */
 .blog-home2 {
@@ -9120,7 +9115,6 @@ color: #fff;
   background-color:#fff;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
-
 /* .item:hover a{
   color: #000;
 } */
@@ -9149,7 +9143,11 @@ color: #fff;
 .prof-img-row{
   padding: 22px 0;
 }
-
+.name{
+  padding: 10px;
+  text-align: center;
+  
+  }
   .name .faculty_name{
     font-size: 20px;
     margin-bottom: 0 !important;
@@ -9428,7 +9426,6 @@ hr.solid-second{
   }
   .accordion-body li{
     font-size: 15px;
-    text-align: left;
   }
   .accordion-header span{
     font-size: 18px;
